--- a/Sejong/index.html
+++ b/Sejong/index.html
@@ -7,7 +7,6 @@
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/layout.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/common.js"></script>
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/main.css">
     <title>세종</title>
@@ -1022,7 +1021,7 @@
                                             </a>
                                         </li>
                                     </ul>
-                                    <div class="more"><a href="#n"><span>더보기</span></a></div>
+                                    <div class="more"><a href="#n"><span>공지사항 더보기</span></a></div>
                                 </div>
                                 <div role="tabpanel" id="tabpanel_02" aria-labelledby="tab_02" aria-hidden="true">
                                     <ul>
@@ -1057,7 +1056,7 @@
                                             </a>
                                         </li>
                                     </ul>
-                                    <div class="more"><a href="#n"><span>더보기</span></a></div>
+                                    <div class="more"><a href="#n"><span>고시공고 더보기</span></a></div>
                                 </div>
                                 <div role="tabpanel" id="tabpanel_03" aria-labelledby="tab_03" aria-hidden="true">
                                     <ul>
@@ -1092,7 +1091,7 @@
                                             </a>
                                         </li>
                                     </ul>
-                                    <div class="more"><a href="#n"><span>더보기</span></a></div>
+                                    <div class="more"><a href="#n"><span>시험정보 더보기</span></a></div>
                                 </div>
                                 <div role="tabpanel" id="tabpanel_04" aria-labelledby="tab_04" aria-hidden="true">                                    
                                     <ul>
@@ -1127,7 +1126,7 @@
                                             </a>
                                         </li>
                                     </ul>
-                                    <div class="more"><a href="#n"><span>더보기</span></a></div>
+                                    <div class="more"><a href="#n"><span>보도자료 더보기</span></a></div>
                                 </div>
                             </div>
                         </div>
