--- a/Sejong/index.html
+++ b/Sejong/index.html
@@ -811,6 +811,7 @@
                                     <div class="swiper-pagination"></div>
                                     <div class="buntton_inner">
                                         <button class="prev"><span>이전</span></button>
+                                        <button class="start"><span>재생</span></button>
                                         <button class="stop"><span>정지</span></button>
                                         <button class="next"><span>다음</span></button>
                                     </div>
@@ -837,69 +838,69 @@
                 <div class="wrapper">
                     <h2>서비스</h2>
                     <ul>
-                        <li class="civil">
+                        <li>
                             <a href="#n">
-                                <i>아이콘</i>
+                                <i class="civil">아이콘</i>
                                 <span>민원안내</span>
                             </a>
                         </li>
-                        <li class="recruitment">
+                        <li>
                             <a href="#n">
-                                <i>아이콘</i>
+                                <i class="recruitment">아이콘</i>
                                 <span>채용공고</span>
                             </a>
                         </li>
-                        <li class="matching">
+                        <li>
                             <a href="#n">
-                                <i>아이콘</i>
+                                <i class="matching">아이콘</i>
                                 <span>어울링</span>
                             </a>
                         </li>
-                        <li class="government">
+                        <li>
                             <a href="#n">
-                                <i>아이콘</i>
+                                <i class="government">아이콘</i>
                                 <span>시정 소식지</span>
                             </a>
                         </li>
-                        <li class="bus">
+                        <li>
                             <a href="#n">
-                                <i>아이콘</i>
+                                <i class="bus">아이콘</i>
                                 <span>버스정보 센터</span>
                             </a>
                         </li>
-                        <li class="monitor">
+                        <li>
                             <a href="#n">
-                                <i>아이콘</i>
+                                <i class="monitor">아이콘</i>
                                 <span>시정모니터</span>
                             </a>
                         </li>
-                        <li class="free_law">
+                        <li>
                             <a href="#n">
-                                <i>아이콘</i>
+                                <i class="free_law">아이콘</i>
                                 <span>무료법률 상담</span>
                             </a>
                         </li>
-                        <li class="waste">
+                        <li>
                             <a href="#n">
-                                <i>아이콘</i>
+                                <i class="waste">아이콘</i>
                                 <span>대형폐기물 배출</span>
                             </a>
                         </li>
-                        <li class="expenses">
+                        <li>
                             <a href="#n">
-                                <i>아이콘</i>
+                                <i class="expenses">아이콘</i>
                                 <span>업무추진비 공개</span>
                             </a>
                         </li>
-                        <li class="integrity">
+                        <li>
                             <a href="#n">
-                                <i>아이콘</i>
+                                <i class="integrity">아이콘</i>
                                 <span>청렴도 측정 공개</span>
                             </a>
                         </li>
-                        <li class="view">
+                        <li>
                             <a href="#n">
-                                <i>아이콘</i>
+                                <i class="view">아이콘</i>
                                 <span>전체보기</span>
                             </a>
                         </li>
@@ -1202,8 +1203,23 @@
             <div class="footer_head">
                 <div class="wrapper">
                     <ul class="footer_link">
+                        <li>                            
+                            <button>실속/직속기관/사업소</span><i>화살표아이콘</i></button>
+                            <!--<a href="#n"><span>실속/직속기관/사업소</span><i>화살표아이콘</i></a>-->
+                            <ul class="depth2">
+                                <li><a href="#n">공보관</a></li>
+                                <li><a href="#n">자치행정국</a></li>
+                                <li><a href="#n">도시주택국</a></li>
+                                <li><a href="#n">공보관</a></li>
+                                <li><a href="#n">세종소방서</a></li>
+                                <li><a href="#n">남부통합보건지소</a></li>
+                                <li><a href="#n">공보관</a></li>
+                                <li><a href="#n">도로관리사업소</a></li>
+                            </ul>
+                        </li>
                         <li>
-                            <a href="#n"><span>실속/직속기관/사업소</span><i>화살표아이콘</i></a>
+                            <button>읍면동</span><i>화살표아이콘</i></button>
+                            <!--<a href="#n">읍면동<i>화살표아이콘</i></a>-->
                             <ul class="depth2">
                                 <li><a href="#n">공보관</a></li>
                                 <li><a href="#n">자치행정국</a></li>
@@ -1215,7 +1231,23 @@
                                 <li><a href="#n">도로관리사업소</a></li>
                             </ul>
                         </li>
-                        <li><a href="#n">읍면동<i>화살표아이콘</i></a>
+                        <li>
+                            <button>관련사이트</span><i>화살표아이콘</i></button>
+                            <!--<a href="#n">관련사이트<i>화살표아이콘</i></a>-->
+                            <ul class="depth2">
+                                <li><a href="#n">공보관</a></li>
+                                <li><a href="#n">자치행정국</a></li>
+                                <li><a href="#n">도시주택국</a></li>
+                                <li><a href="#n">공보관</a></li>
+                                <li><a href="#n">세종소방서</a></li>
+                                <li><a href="#n">남부통합보건지소</a></li>
+                                <li><a href="#n">공보관</a></li>
+                                <li><a href="#n">도로관리사업소</a></li>
+                            </ul>
+                        </li>                            
+                        <li>
+                            <button>공기업/출자·출연기관</span><i>화살표아이콘</i></button>
+                            <!--<a href="#n">공기업/출자·출연기관<i>화살표아이콘</i></a>-->
                             <ul class="depth2">
                                 <li><a href="#n">공보관</a></li>
                                 <li><a href="#n">자치행정국</a></li>
@@ -1227,31 +1259,9 @@
                                 <li><a href="#n">도로관리사업소</a></li>
                             </ul>
                         </li>
-                        <li><a href="#n">관련사이트<i>화살표아이콘</i></a>
-                            <ul class="depth2">
-                                <li><a href="#n">공보관</a></li>
-                                <li><a href="#n">자치행정국</a></li>
-                                <li><a href="#n">도시주택국</a></li>
-                                <li><a href="#n">공보관</a></li>
-                                <li><a href="#n">세종소방서</a></li>
-                                <li><a href="#n">남부통합보건지소</a></li>
-                                <li><a href="#n">공보관</a></li>
-                                <li><a href="#n">도로관리사업소</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#n">공기업/출자·출연기관<i>화살표아이콘</i></a>
-                            <ul class="depth2">
-                                <li><a href="#n">공보관</a></li>
-                                <li><a href="#n">자치행정국</a></li>
-                                <li><a href="#n">도시주택국</a></li>
-                                <li><a href="#n">공보관</a></li>
-                                <li><a href="#n">세종소방서</a></li>
-                                <li><a href="#n">남부통합보건지소</a></li>
-                                <li><a href="#n">공보관</a></li>
-                                <li><a href="#n">도로관리사업소</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#n">지역/전국 기관<i>화살표아이콘</i></a>
+                        <li>
+                            <button>지역/전국 기관</span><i>화살표아이콘</i></button>
+                            <!--<a href="#n">지역/전국 기관<i>화살표아이콘</i></a>-->
                             <ul class="depth2">
                                 <li><a href="#n">공보관</a></li>
                                 <li><a href="#n">자치행정국</a></li>
