--- a/Sejong/index.html
+++ b/Sejong/index.html
@@ -1218,8 +1218,7 @@
                             </ul>
                         </li>
                         <li>
-                            <button>읍면동</span><i>화살표아이콘</i></button>
-                            <!--<a href="#n">읍면동<i>화살표아이콘</i></a>-->
+                            <button>읍면동<i>화살표아이콘</i></button>
                             <ul class="depth2">
                                 <li><a href="#n">공보관</a></li>
                                 <li><a href="#n">자치행정국</a></li>
@@ -1232,8 +1231,7 @@
                             </ul>
                         </li>
                         <li>
-                            <button>관련사이트</span><i>화살표아이콘</i></button>
-                            <!--<a href="#n">관련사이트<i>화살표아이콘</i></a>-->
+                            <button>관련사이트<i>화살표아이콘</i></button>
                             <ul class="depth2">
                                 <li><a href="#n">공보관</a></li>
                                 <li><a href="#n">자치행정국</a></li>
@@ -1246,8 +1244,7 @@
                             </ul>
                         </li>                            
                         <li>
-                            <button>공기업/출자·출연기관</span><i>화살표아이콘</i></button>
-                            <!--<a href="#n">공기업/출자·출연기관<i>화살표아이콘</i></a>-->
+                            <button>공기업/출자·출연기관<i>화살표아이콘</i></button>
                             <ul class="depth2">
                                 <li><a href="#n">공보관</a></li>
                                 <li><a href="#n">자치행정국</a></li>
@@ -1260,8 +1257,7 @@
                             </ul>
                         </li>
                         <li>
-                            <button>지역/전국 기관</span><i>화살표아이콘</i></button>
-                            <!--<a href="#n">지역/전국 기관<i>화살표아이콘</i></a>-->
+                            <button>지역/전국 기관<i>화살표아이콘</i></button>
                             <ul class="depth2">
                                 <li><a href="#n">공보관</a></li>
                                 <li><a href="#n">자치행정국</a></li>
