--- a/Sejong/index.html
+++ b/Sejong/index.html
@@ -1204,8 +1204,7 @@
                 <div class="wrapper">
                     <ul class="footer_link">
                         <li>                            
-                            <button>실속/직속기관/사업소</span><i>화살표아이콘</i></button>
-                            <!--<a href="#n"><span>실속/직속기관/사업소</span><i>화살표아이콘</i></a>-->
+                            <button>실속/직속기관/사업소<i>화살표아이콘</i></button>
                             <ul class="depth2">
                                 <li><a href="#n">공보관</a></li>
                                 <li><a href="#n">자치행정국</a></li>
