--- a/Sejong/index.html
+++ b/Sejong/index.html
@@ -775,10 +775,11 @@
             </div>
         </header>
         <div class="container">
-            <div class="number1" id="skip_content">
+            <div class="section_visual" id="skip_content">
                 <div class="wrapper">
                     <!-- 폼그룹 -->
                     <div class="serach">
+                        <h2 class="skip">검색</h2>
                         <div class="serach_tit">
                             <label>메인검색창</label>
                         </div>
@@ -795,6 +796,7 @@
                     <!-- 폼그룹 -->
                     <div class="visual">
                         <div class="visual_popup">
+                            <h2 class="skip">비주얼팝업</h2>
                             <div class="swiper"> 
                                 <ul class="swiper-wrapper"> 
                                     <li class="swiper-slide">
@@ -819,6 +821,7 @@
                             </div>
                         </div>
                         <div class="mayor_area">
+                            <h2 class="skip">시장소개</h2>
                             <div class="title_group">
                                 <img src="../Sejong/images/visual/sejong.svg" alt="세종이미래다">
                                 <strong>시민과 함께하는 세종시장</strong>
@@ -834,7 +837,7 @@
                     </div>
                 </div>
             </div>
-            <div class="number2">
+            <div class="section_service">
                 <div class="wrapper">
                     <h2>서비스</h2>
                     <ul>
@@ -907,17 +910,18 @@
                     </ul>
                 </div>
             </div>
-            <div class="number3">
+            <div class="section_eventbanner">
+                <h2 class="skip">이벤트배너</h2>
                 <div class="wrapper">
-                    <h2>
+                    <h3>
                         여러분의 목소리가 세종시를 바꾸는 정책이 됩니다
-                    </h2>
+                    </h3>
                     <div class="more"><a href="#n">세종에게 제안하기</a></div>
                     <div class="left_human"><img src="../Sejong/images/event_popup/event_banner_left.svg" alt="배경 배너 왼쪽 사람"></div>
                     <div class="right_human"><img src="../Sejong/images/event_popup/event_banner_right.svg" alt="배경 배너 오른쪽 사람"></div>
                 </div>
             </div>
-            <div class="number4">
+            <div class="section_popupzone">
                 <div class="wrapper">
                     <h2>세종 팝업존</h2>
                     <div class="popzone_wrap">
@@ -964,7 +968,7 @@
                     </div>
                 </div>
             </div>
-            <div class="number5">
+            <div class="section_news">
                 <div class="wrapper">
                     <div class="today_news">
                         <h2>일일뉴스</h2>
@@ -1161,7 +1165,7 @@
                     </div>
                 </div>      
             </div>
-            <div class="number6">
+            <div class="section_sejong_tv">
                 <div class="wrapper">
                     <h2>세종TV</h2>
                     <div class="sns_content">
@@ -1201,6 +1205,7 @@
         </div>
         <footer>
             <div class="footer_head">
+                <h2 class="skip">관련기관 바로가기</h2>
                 <div class="wrapper">
                     <ul class="footer_link">
                         <li>                            
