--- a/Sejong/index.html
+++ b/Sejong/index.html
@@ -7,9 +7,10 @@
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/layout.js"></script>
     <script src="js/main.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/main.css">
-    <title>세종</title>
+    <title>세종특별자치시</title>
 </head>
 <body>
     <div class="skipnav">
@@ -780,15 +781,13 @@
                     <!-- 폼그룹 -->
                     <div class="serach">
                         <h2 class="skip">검색</h2>
-                        <div class="serach_tit">
-                            <label>메인검색창</label>
-                        </div>
                         <div class="serach_content">
                             <div class="sejong">
                                 <a href="#n"><img src="images/search/search_sejong.jpg" alt="세종캐릭터"></a>
                             </div>
                             <div class="search_inner">
-                                <input class="searchinput" type="text" placeholder="세종의 모든것을 검색해보세요">
+                                <label for="keyword">검색어입력</label>
+                                <input class="searchinput" id="keyword" type="text" placeholder="세종의 모든것을 검색해보세요">
                                 <button title="새창으로 이동" class="search_button"><span>검색</span></button>
                             </div>
                         </div>
@@ -1286,7 +1285,6 @@
                             <li><a href="#n">저작권정책</a></li>
                             <li><a href="#n">이메일주소무단수집거부</a></li>
                             <li><a href="#n">오시는길</a></li>
-                            <li><a href="#n"></a></li>
                             <li><a href="#n">홈페이지개선의견</a></li>
                         </ul>
                         <div class="footer_info">
