--- a/myprot/index.html
+++ b/myprot/index.html
@@ -18,11 +18,11 @@
     <div id="wrap">
         <header>
             <div class="wrapper">
-                <h1 class="logo"><a href="#n"><img src="../myprot/images/logo_w.svg" alt="한신희 그림으로 만들어진 로고"></a></h1>
+                <h1 class="logo"><a href="index.html"><img src="../myprot/images/logo_w.svg" alt="한신희 그림으로 만들어진 로고"></a></h1>
                 <nav class="gnb">
                     <ul class="personal_depth1">
                         <li><a href="#n"><span>SEJONG</span></a></li>
-                        <li><a href="#n"><span>AERO-K</span></a></li>
+                        <li><a href="aerok.html"><span>AERO-K</span></a></li>
                         <li><a href="#n"><span>ROT</span></a></li>
                     </ul>
                     <i class="skip">슬래쉬</i>
